--- a/sys-src/server/package.json
+++ b/sys-src/server/package.json
@@ -10,9 +10,7 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "./src/test/setup.ts"
-    ]
+    "transform": {}
   },
   "keywords": [],
   "author": "",
@@ -36,6 +34,7 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.5",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
     "@types/supertest": "^2.0.12",
