--- a/sys-src/server/package.json
+++ b/sys-src/server/package.json
@@ -9,10 +9,7 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "./src/test/setup.ts"
-    ]
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +20,6 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/validator": "^13.7.15",
-    "jsonwebtoken": "^9.0.0",
     "axios": "^1.4.0",
     "base64url": "^3.0.1",
     "bcrypt": "^5.1.0",
@@ -31,6 +27,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
