--- a/sys-src/server/package.json
+++ b/sys-src/server/package.json
@@ -24,16 +24,19 @@
     "base64url": "^3.0.1",
     "bcrypt": "^5.1.0",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.2",
+    "socket.io": "^4.6.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
     "@types/supertest": "^2.0.12",
