--- a/sys-doc/spec.yaml
+++ b/sys-doc/spec.yaml
@@ -367,15 +367,12 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/User"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
+                type: object
+                properties:
+                  username:
+                    $ref: "#/components/schemas/User/properties/username"
+                  id:
+                    $ref: "#/components/schemas/User/properties/id"
         "404":
           description: Room not found
           content:
@@ -385,7 +382,7 @@ paths:
     put:
       tags:
         - users
-      summary: update Users
+      summary: update Room Users
       description: update Users of specific Room
       parameters:
         - name: roomId
@@ -400,7 +397,7 @@ paths:
             schema:
               type: array
               items:
-                $ref: "#/components/schemas/User"
+                $ref: "#/components/schemas/User/properties/id"
       responses:
         "200":
           description: Users updated
@@ -409,7 +406,12 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/User"
+                  type: object
+                  properties:
+                    username:
+                      $ref: "#/components/schemas/User/properties/username"
+                    id:
+                      $ref: "#/components/schemas/User/properties/id"
         "400":
           description: Bad Request
           content:
@@ -534,7 +536,11 @@ paths:
         content:
           application/json:
             schema:
-              type: integer
+              properties:
+                wins:
+                  $ref: "#/components/schemas/Ranking/properties/wins"
+                losses:
+                  $ref: "#/components/schemas/Ranking/properties/losses"
       responses:
         "200":
           description: Ranking created
@@ -570,12 +576,6 @@ paths:
       responses:
         "200":
           description: Ranking deleted
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
         "404":
           description: User not found
           content:
@@ -600,12 +600,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Ranking"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
         "404":
           description: User not found
           content:
@@ -627,18 +621,6 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Ranking"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        "404":
-          description: User not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
   /rooms/{roomId}/user/{userId}/moves:
     post:
       tags:
@@ -702,12 +684,6 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Turn"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
         "404":
           description: User not found
           content:
@@ -731,7 +707,12 @@ components:
           minItems: 2
           maxItems: 4
           items:
-            $ref: "#/components/schemas/User"
+            type: object
+            properties:
+              username:
+                $ref: "#/components/schemas/User/properties/username"
+              id:
+                $ref: "#/components/schemas/User/properties/id"
         rules:
           type: array
           items:
@@ -766,8 +747,6 @@ components:
           format: int64
         name:
           type: string
-        checked:
-          type: boolean
     Card:
       type: object
       properties:
@@ -786,8 +765,10 @@ components:
           format: int64
         wins:
           type: integer
+        losses:
+          type: integer
         User:
-          $ref: "#/components/schemas/User/properties/username"
+          $ref: "#/components/schemas/User/properties/id"
     Turn:
       type: object
       properties:
@@ -795,9 +776,11 @@ components:
           type: integer
           format: int64
         Card:
-          $ref: "#/components/schemas/Card"
+          $ref: "#/components/schemas/Card/properties/id"
         User:
-          $ref: "#/components/schemas/User/properties/username"
+          $ref: "#/components/schemas/User/properties/id"
+        Room:
+          $ref: "#/components/schemas/Room/properties/id"
     Response:
       type: object
       properties:
