--- a/sys-src/server/package.json
+++ b/sys-src/server/package.json
@@ -30,6 +30,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
+    "mongodb-memory-server": "^8.12.2",
     "mongoose": "^7.1.2",
     "socket.io": "^4.6.1",
     "ts-node-dev": "^2.0.0",
