--- a/sys-src/server/package.json
+++ b/sys-src/server/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.1.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
