--- a/sys-src/app/package.json
+++ b/sys-src/app/package.json
@@ -20,6 +20,7 @@
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
