--- a/sys-src/app/package.json
+++ b/sys-src/app/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.5",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.14.2",
     "@unocss/eslint-config": "^0.51.4",
