--- a/sys-src/app/package.json
+++ b/sys-src/app/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.0.32",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
